--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.210 Kernel Configuration
+# Linux/arm64 4.9.219 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -45,7 +45,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-P3-3.03"
+CONFIG_LOCALVERSION="-ElementalX-P3-3.04"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -235,7 +235,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-CONFIG_KPROBES=y
+# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
 # CONFIG_UPROBES is not set
@@ -1160,7 +1160,6 @@ CONFIG_SOCKEV_NLMCAST=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_TCPPROBE is not set
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
@@ -1543,7 +1542,7 @@ CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_BUFIO=y
 # CONFIG_DM_DEBUG_BLOCK_STACK_TRACING is not set
-# CONFIG_DM_CRYPT is not set
+CONFIG_DM_CRYPT=y
 CONFIG_DM_DEFAULT_KEY=y
 CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
@@ -3373,6 +3372,7 @@ CONFIG_HID_MAGICMOUSE=y
 CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_MONTEREY is not set
 CONFIG_HID_MULTITOUCH=y
+CONFIG_HID_NINTENDO=y
 # CONFIG_HID_NTRIG is not set
 # CONFIG_HID_ORTEK is not set
 CONFIG_HID_PANTHERLORD=y
@@ -4990,9 +4990,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
-CONFIG_KPROBE_EVENT=y
-CONFIG_BPF_EVENTS=y
-CONFIG_PROBE_EVENTS=y
+# CONFIG_PROBE_EVENTS is not set
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_TRACEPOINT_BENCHMARK is not set
@@ -5006,7 +5004,6 @@ CONFIG_TRACING_EVENTS_GPIO=y
 #
 # CONFIG_LKDTM is not set
 # CONFIG_TEST_LIST_SORT is not set
-# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
